--- a/Emergence/Emergence.uplugin
+++ b/Emergence/Emergence.uplugin
@@ -1,7 +1,7 @@
 {
 	"FileVersion": 3,
 	"Version": 1,
-	"VersionName": "0.3.1.2",
+	"VersionName": "0.3.2",
 	"FriendlyName": "Emergence",
 	"Description": "",
 	"Category": "Metaverse",
@@ -14,6 +14,12 @@
 	"IsBetaVersion": true,
 	"IsExperimentalVersion": false,
 	"Installed": false,
+	"bHasExplicitPlatforms": true,
+	"SupportedTargetPlatforms": [
+		"Win64",
+		"Win32",
+		"Mac"
+	],
 	"Modules": [
 		{
 			"Name": "Emergence",
@@ -21,7 +27,8 @@
 			"LoadingPhase": "PreDefault",
 			"WhitelistPlatforms": [
 				"Win64",
-				"Win32"
+				"Win32",
+				"Mac"
 			]
 		},
 		{
@@ -30,7 +37,8 @@
 			"LoadingPhase": "Default",
 			"WhitelistPlatforms": [
 				"Win64",
-				"Win32"
+				"Win32",
+				"Mac"
 			]
 		},
 		{
@@ -39,8 +47,14 @@
 			"LoadingPhase": "Default",
 			"WhitelistPlatforms": [
 				"Win64",
-				"Win32"
+				"Win32",
+				"Mac"
 			]
+		},
+		{
+			"Name": "EmergenceEmailForm",
+			"Type": "Editor",
+			"LoadingPhase": "Default"
 		}
 	]
 }
