--- a/Emergence/Emergence.uplugin
+++ b/Emergence/Emergence.uplugin
@@ -1,7 +1,7 @@
 {
 	"FileVersion": 3,
 	"Version": 1,
-	"VersionName": "0.3.2",
+	"VersionName": "0.3.3",
 	"FriendlyName": "Emergence",
 	"Description": "",
 	"Category": "Metaverse",
@@ -10,6 +10,7 @@
 	"DocsURL": "https://docs.openmetadao.com/",
 	"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/2a2ac549e90440b59cc331c53de19e88",
 	"SupportURL": "https://discord.gg/openmeta",
+	"EngineVersion": "5.1",
 	"CanContainContent": true,
 	"IsBetaVersion": true,
 	"IsExperimentalVersion": false,
