--- a/EmergenceVRMSupport/EmergenceVRMSupport.uplugin
+++ b/EmergenceVRMSupport/EmergenceVRMSupport.uplugin
@@ -1,7 +1,7 @@
 {
 	"FileVersion": 3,
 	"Version": 1,
-	"VersionName": "0.3.2",
+	"VersionName": "0.4.0",
 	"FriendlyName": "Emergence VRM Support",
 	"Description": "",
 	"Category": "Metaverse",
@@ -11,7 +11,7 @@
 	"MarketplaceURL": "",
 	"SupportURL": "https://discord.gg/openmeta",
 	"EnabledByDefault": false,
-	"CanContainContent": false,
+	"CanContainContent": true,
 	"IsBetaVersion": true,
 	"IsExperimentalVersion": false,
 	"Installed": false,
