--- a/EmergenceVRMSupport/EmergenceVRMSupport.uplugin
+++ b/EmergenceVRMSupport/EmergenceVRMSupport.uplugin
@@ -9,7 +9,7 @@
 	"CreatedByURL": "https://crucible.network/",
 	"DocsURL": "https://docs.openmetadao.com/",
 	"MarketplaceURL": "",
-	"SupportURL": "https://discord.gg/openmeta",
+	"SupportURL": "https://discord.gg/openmetadao",
 	"EnabledByDefault": false,
 	"CanContainContent": true,
 	"IsBetaVersion": true,
